// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider execution order tests should be able to be in isLoading and isDebouncing state simultaneously 1`] = `
Array [
  Object {
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "slug": "1",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "slug": "2",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": false,
    "networkStatus": 7,
    "refetch": [Function],
    "slug": "2",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "2",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": true,
    "networkStatus": 2,
    "refetch": [Function],
    "slug": "2",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "2",
    },
  },
]
`;

exports[`provider execution order tests should resolve in order 1`] = `
Array [
  Object {
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "slug": "1",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": false,
    "networkStatus": 7,
    "refetch": [Function],
    "slug": "1",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": false,
    "networkStatus": 7,
    "refetch": [Function],
    "slug": "2",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "1",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": true,
    "isLoading": false,
    "networkStatus": 7,
    "refetch": [Function],
    "slug": "3",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "debounceTimeMs": 1000,
    "debouncedProps": Object {
      "children": [Function],
      "debounceTimeMs": 1000,
      "slug": "3",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isDebouncing": false,
    "isLoading": true,
    "networkStatus": 2,
    "refetch": [Function],
    "slug": "3",
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "slug": "3",
    },
  },
]
`;
